# RAC2026

./: .gitignore  .gitmodules  colcon_defaults.yaml
docker/: compose.yaml  exec_px4_sim.sh  exec_ros2.sh
docker/px4_sim/: Dockerfile
docker/ros2/: Dockerfile  bashrc  entrypoint.sh  requirements.txt
docs/: parameters.md  tuning.md
gz/: gzsim.sh  px4sitl.sh
gz/config/: server.config
gz/models/apriltag/: model.config  model.sdf
gz/models/rac2026_vtol/: model.config  model.sdf
gz/models/siyi_cam/: model.config  model.sdf
gz/worlds/: rac2026_world.sdf
missions/: prec_goto.json  simple_mc.json  vtol_fw_mission.json  vtol_transition.json
model/: yolo26n_1280_3out_int8.onnx
src/aircraft_bringup/: CMakeLists.txt  package.xml
src/aircraft_bringup/config/: vision.yaml  vision_tracker.yaml
src/aircraft_bringup/launch/: aircraft_controller.launch.py  stream_viewer.launch.py  vision_processor.launch.py  vision_tracker.launch.py
src/aircraft_bringup/missions/: aircraft_state.json  precland.json  simple_mc.json
src/aircraft_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/aircraft_controller/aircraft_controller/: ac_sample.py
src/aircraft_controller/aircraft_controller/core/: aircraft_commands.py  mission_controller.py  px4_interface.py
src/aircraft_controller/aircraft_controller/mixins/: slew_mixin.py
src/aircraft_controller/include/: mission_runner.hpp
src/aircraft_controller/include/actions/: precise_goto_action.hpp  update_aircraft_state_action.hpp  vision_tracker_mode_action.hpp  vtol_actions.hpp
src/aircraft_controller/include/trajectory/: fw_trajectory_executor.hpp  vtol_trajectory_executor.hpp
src/aircraft_controller/launch/: aircraft_controller.launch.py  vision_tracker.launch.py
src/aircraft_controller/src/: mission_runner.cpp
src/aircraft_controller/src/actions/: vtol_actions.cpp
src/aircraft_controller/src/trajectory/: fw_trajectory_executor.cpp
src/aircraft_logger/: package.xml  setup.cfg  setup.py
src/aircraft_logger/aircraft_logger/: aircraft_logger.py
src/aircraft_msgs/: CMakeLists.txt  package.xml
src/aircraft_msgs/msg/: AircraftState.msg  CameraTrackedObject.msg
src/translation_node/src/: translation_util.h
src/vision_processor/: package.xml  setup.py
src/vision_processor/vision_processor/: set_track_type.py  stream_viewer.py  vision_processor.py
src/vision_processor/vision_processor/detectors/: __init__.py  aruco_detector.py  onnx_detector.py
src/vision_processor/vision_processor/pipeline/: __init__.py  gazebo_pipeline.py  pipelinebase.py  siyi_pipeline.py  srt_pipeline.py
src/vision_tracker/: CMakeLists.txt  package.xml
src/vision_tracker/include/: vision_tracker_mode.hpp
src/vision_tracker/include/vision_tracker/: vision_tracker_mode.hpp
src/vision_tracker/src/: main.cpp  vision_tracker_mode.cpp
tools/camera/: receiveStream.sh
tools/camera/apriltag/: detect.py
tools/camera/calibration/: calibrate.py  undistort.py
tools/cameraStream/: receive.sh  receiveklv.py  stream.sh  streamklv.py
tools/halowMonitor/: README.md  exampleOutput.txt  halowMonitor.py
